# crypto-monitor

./: README.md  build.sh  docker-compose.yml  docker-script.sh  py-run.sh
client/: CMakeLists.txt  app  compile_commands.json  main.cpp  make.sh  server.py
client/.cache/clangd/index/: DataManager.cpp.2B2764F16CD95857.idx  DataManager.hpp.D9C05840666F71AC.idx  ListModel.cpp.86D3FC6495F72025.idx  ListModel.hpp.8766412DCE548555.idx  MainWindow.cpp.6AACDD3042540232.idx  MainWindow.hpp.59F65DFC7D8AC1F7.idx  Parser.cpp.15E8CD0401F4FF4F.idx  Parser.hpp.B819FE7E03280276.idx  Reciever.cpp.8B4DDC3F6B46A545.idx  Reciever.hpp.91B192A78285D024.idx  TableLinker.cpp.9421846144DCA31F.idx  TableLinker.hpp.A72DF7AB2239F88B.idx  TableModel.cpp.26B1927357B267C5.idx  TableModel.hpp.17F33A3506AF693A.idx  main.cpp.9898BAA8BF43C3DA.idx  moc_ListModel.cpp.5585A931680EBF97.idx  moc_MainWindow.cpp.94BC92EBFA173DC9.idx  mocs_compilation.cpp.252128155F25BF36.idx
client/include/: DataManager.hpp  ListModel.hpp  MainWindow.hpp  Parser.hpp  Reader.hpp  Reciever.hpp  TableBuilder.hpp  TableLinker.hpp  TableModel.hpp
client/src/: DataManager.cpp  ListModel.cpp  MainWindow.cpp  Parser.cpp  Reader.cpp  Reciever.cpp  TableBuilder.cpp  TableLinker.cpp  TableModel.cpp  TableView.cpp
graphics/build-crypto-alarm-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  crypto-alarm
graphics/crypto-alarm/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
main/: app  compile_commands.json  make.sh
main/.build/: CMakeCache.txt  Makefile  cmake_install.cmake
main/include/: DataManager.hpp  Reciever.hpp  TableView.hpp  ToolBar.hpp
main/resources/: parser.py
main/src/: Reciever.cpp  TableView.cpp  ToolBar.cpp
server/: Dockerfile  pyrightconfig.json  server.py
server/resources/: tokens.txt
server/test/: CMakeLists.txt  app  main.cpp  main.py  make.sh
server_cpp/: CMakeLists.txt  compile_commands.json  main.cpp  make.sh
server_cpp/.cache/clangd/index/: Socket.cpp.E5D052055DDBB49B.idx  main.cpp.A0C39770E95E52F9.idx  mocs_compilation.cpp.2C833AF53760B4C3.idx
src/: Dockerfile
src/client_sample/: main.py
src/client_with_ui/: CMakeLists.txt  app  compile_commands.json  main.cpp  make.sh
src/client_with_ui/include/: Allias.hpp  DataManager.hpp  LineItem.hpp  MainWindow.hpp  Parser.hpp  ToolBar.hpp
src/client_with_ui/pysrc/: Updater.py
src/client_with_ui/src/: DataManager.cpp  LineItem.cpp  MainWindow.cpp  Parser.cpp  Reciever.cpp  TableLinker.cpp  ToolBar.cpp
src/ui_sample/: CMakeLists.txt  app  compile_commands.json  data.txt  main.cpp  make.sh  update.py
src/ui_sample/.cache/clangd/index/: DataManager.cpp.A4DD79C2DAFC201B.idx  DataManager.hpp.129611587F79504F.idx  Dispenser.cpp.29D4B564E04C4E04.idx  LineItem.cpp.C1474C9CCF43D2F7.idx  LineItem.hpp.E856FE1727DD84AD.idx  MainWindow.cpp.16B8D96FC0D1207A.idx  MainWindow.cpp.B3C234E1895A7102.idx  MainWindow.hpp.23FB9D4868C9037F.idx  MainWindow.hpp.DC727CB586D790DD.idx  Parser.cpp.CC49169169B1225C.idx  Parser.hpp.17B943D4CBE863CC.idx  Reader.cpp.27950A2BCB768175.idx  Reader.hpp.CA2F4FDFF3BA6FD2.idx  Reciever.cpp.E8473BE96073B079.idx  Reciever.hpp.DE710D333725CEB5.idx  ToolBar.cpp.A0393C46087FF62C.idx  ToolBar.hpp.16413A968921AABE.idx  main.cpp.107C108599B79CF2.idx  main.cpp.7362D56C669D3321.idx  moc_MainWindow.cpp.09DBAC793613E3D4.idx  moc_ToolBar.cpp.494A75CB6037D372.idx  mocs_compilation.cpp.EB47BCB1E5C0FE72.idx
src/ui_sample/include/: DataManager.hpp  MainWindow.hpp  Parser.hpp  Reciever.hpp
src/ui_sample/pysrc/: Updater.py  Updater.spec  update.py
src/ui_sample/src/: DataManager.cpp  MainWindow.cpp  Parser.cpp  Reciever.cpp
(+135 files in other folders)
